desenvolvimento da introdução

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="static\css\geral.css">
     <link rel="stylesheet" href="static\css\header.css">
     <link rel="stylesheet" href="static\css\introducao.css">
+    <link rel="stylesheet" href="static\css\aspectos.css">
 </head>
 <body>
         <nav>
@@ -19,6 +20,7 @@
                 <ul id="ul-chat"><span class="material-symbols-outlined">chat</span><a href="">Chat</a></ul>
             </li>
         </nav>
+
         <div class="stack">
             <div id="header-video-background">
                 <video autoplay loop muted playsinline class="background-video">
@@ -39,12 +41,15 @@
         </div>
 
 
-        <!-- <article class="seção" id="introdução" >
-            <img src="static\img\introducao\introducao-background.png" alt="" id="introducao-background">
+        <article class="seção" id="introdução" >
             <h2 class="titulo">Introdução</h2>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae maxime adipisci, molestias, iste sapiente tempore placeat error quae itaque incidunt quidem doloremque! Voluptate adipisci excepturi eum neque molestiae et! Quaerat.</p>
-        </article> -->
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae maxime adipisci, molestias, iste sapiente tempore placeat error quae itaque incidunt quidem doloremque! Voluptate adipisci excepturi eum neque molestiae et! Quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus mollitia animi dolor temporibus quos dolore fugiat, saepe suscipit excepturi, dicta, aliquam provident eum corrupti exercitationem doloremque officiis hic id!</p>
+        </article>
 
+        <article class="seção" id="aspectos">
+            <h2 class="titulo">Aspectos</h2>
+
+        </article>
 
     <footer></footer>
 </body>
