--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="header-title">
                 <img src="static\img\logo.png" alt="Logo principal do site" id="logo-title">
                 <div id="header-texto">
-                    <h2 id="header-h2">Lorem Ipsum</h2>
+                    <h1 id="header-h1">Lorem Ipsum</h1>
                     <p id="header-p">Lorem ipsum dolor sit amet consectetur adisciping elit</p>
                 </div>    
             </div>
@@ -48,7 +48,22 @@
 
         <article class="seção" id="aspectos">
             <h2 class="titulo">Aspectos</h2>
-
+            <section>
+                <div class="conceito">
+                    <div class="conteudo">
+                        <h3>Conceito</h3>
+                        <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
+                        <button>Saiba mais</button>
+                    </div>
+                    <div class="espaco">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </section>
         </article>
 
     <footer></footer>
