Adição da seção de riscos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="static\css\aspectos.css">
     <link rel="stylesheet" href="static\css\estatuto.css">
     <link rel="stylesheet" href="static\css\divisão.css">
+    <link rel="stylesheet" href="static\css\riscos.css">
 </head>
 <body>
         <nav>
@@ -96,8 +97,6 @@
                 </div>
             </section>
         </article>
-
-        <article class="seção" id="riscos"></article>
         
         <article class="seção" id="estatuto">
             <h2 class="titulo"><img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto"> Estatuto da Criança e do adolescente<img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto2"></h2>
@@ -118,6 +117,27 @@
             <div>
                 <img src="static/img/divisão/divisão.png" alt="">
             </div>    
+        </article>
+
+        <article class="seção" id="riscos">
+            <section class="seção">
+                <h2 class="titulo">Riscos</h2>
+                <p class="texto">Lorem ipsum dolor sit amet. Et quasi galisum aut quia sequi et provident iusto? Ut consequuntur atque et eius cumque At fugit atque qui accusamus vitae ad illo quisquam ab quidem sequi. Ab itaque nisi ex possimus neque ut delectus eaque hic consequuntur modi qui eius similique. Et dolore sapiente non veniam tenetur ut ipsum minima.</p>
+                <p class="texto">Et fuga perferendis eos laudantium reiciendis rem nisi voluptas est quibusdam quae. Et beatae quaerat qui aliquid tempora aut fuga ipsum. Et enim rerum et quis quos vel modi debitis sit eveniet natus.</p>                
+            </section>
+            <section class="riscos">
+                <div class="esquerda">
+                    <div class="risco">
+                        <div class="conteudo"></div>
+                        <img src="static/img/riscos/pexels-sharefaith-491036-1231215.jpg" alt="">
+                    </div>
+                </div>
+                <div class="direita">
+                    <div class="risco">
+
+                    </div>
+                </div>
+            </section>
         </article>
 
         <article class="seção" id="recursos">
