--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
     <link rel="stylesheet" href="static\css\geral.css">
     <link rel="stylesheet" href="static\css\header.css">
-    <link rel="stylesheet" href="static\css\media.css">
     <link rel="stylesheet" href="static\css\introducao.css">
     <link rel="stylesheet" href="static\css\aspectos.css">
     <link rel="stylesheet" href="static\css\estatuto.css">
     <link rel="stylesheet" href="static\css\recursos.css">
     <link rel="stylesheet" href="static\css\divisão.css">
     <link rel="stylesheet" href="static\css\riscos.css">
+    <link rel="stylesheet" href="static\css\media.css"> <!-- deixar sempre por ultimo -->
 </head>
 <body>
         <nav>
@@ -129,13 +129,54 @@
             <section class="riscos">
                 <div class="esquerda">
                     <div class="risco">
-                        <div class="conteudo"></div>
-                        <img src="static/img/riscos/pexels-sharefaith-491036-1231215.jpg" alt="">
+                        <div class="conteudo">
+                            <h3>Risco de lorem</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
+                            <button>Saiba mais</button>
+                        </div>
+                        <img width="100" height="350" src="static/img/riscos/pexels-sharefaith-491036-1231215.jpg" alt="">
+                    </div>
+                    <div class="risco">
+                        <div class="conteudo">
+                            <h3>Risco de lorem</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
+                            <button>Saiba mais</button>
+                        </div>
+                        <img width="100" height="300" src="static/img/riscos/640-little-girl-playing-with-soap-bubbles-of-autumn-leaves-in-the-park.jpg" alt="">
+                    </div>
+                    <div class="risco">
+                        <div class="conteudo">
+                            <h3>Risco de lorem</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
+                            <button>Saiba mais</button>
+                        </div>
+                        <img width="100" height="300" src="static/img/riscos/4anos_da_crianca-just_real_moms-1.jpg" alt="">
                     </div>
                 </div>
                 <div class="direita">
                     <div class="risco">
-
+                        <div class="conteudo">
+                            <h3>Risco de lorem</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
+                            <button>Saiba mais</button>
+                        </div>
+                        <img width="100" height="400" src="static/img/riscos/como-convencer-a-crianca-usar-oculos.jpg" alt="">
+                    </div>
+                    <div class="risco">
+                        <div class="conteudo">
+                            <h3>Risco de lorem</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
+                            <button>Saiba mais</button>
+                        </div>
+                        <img width="100" height="300" src="static/img/riscos/criancas-marista.jpg" alt="">
+                    </div>
+                    <div class="risco">
+                        <div class="conteudo">
+                            <h3>Risco de lorem</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
+                            <button>Saiba mais</button>
+                        </div>
+                        <img width="100" height="250" src="static/img/riscos/blog-saiba-como-encorajar-a-curiosidade-nas-criancas.jpg" alt="">
                     </div>
                 </div>
             </section>
