--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="static\css\aspectos.css">
     <link rel="stylesheet" href="static\css\estatuto.css">
     <link rel="stylesheet" href="static\css\divisão.css">
+    <link rel="stylesheet" href="static/css/footer.css">
 </head>
 <body>
         <nav>
@@ -129,6 +130,34 @@
 
         </article>
 
-    <footer></footer>
+    <footer>
+        <div class="footerText">
+            <div class="esquerda"><img src="../seguranca-jovens-prototipo/static/img/logo.png" alt="" class="imgFooter">
+                <div class="new">
+                    <h1>Inscreva-se na nossa Newsletter!</h1>
+                    <input type="text" class="inputNew" placeholder=" pipipipopopo@gmail.com"> <br>
+                    <button class="ButtonNew">inscrever-se</button>
+                </div>
+            </div>
+
+
+            <div class="direita">
+
+            
+                <!-- <p href="">Aspectos</p>
+                <p href="">Riscos</p>
+                <p href="">Recursos</p>
+                <p href="">Chat</p> -->
+
+                <a href="">Aspectos</a><br>
+                <pre></pre>
+                <a href="">Riscos</a><br>
+                <pre></pre>
+                <a href="">Recursos</a><br>
+                <pre></pre>
+                <a href="">Chat</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
