--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
     <link rel="stylesheet" href="static\css\geral.css">
     <link rel="stylesheet" href="static\css\header.css">
+    <link rel="stylesheet" href="static\css\media.css">
     <link rel="stylesheet" href="static\css\introducao.css">
     <link rel="stylesheet" href="static\css\aspectos.css">
     <link rel="stylesheet" href="static\css\estatuto.css">
     <link rel="stylesheet" href="static\css\recursos.css">
     <link rel="stylesheet" href="static\css\divisão.css">
     <link rel="stylesheet" href="static\css\riscos.css">
-    <link rel="stylesheet" href="static\css\media.css"> <!-- deixar sempre por ultimo -->
 </head>
 <body>
         <nav>
@@ -129,54 +129,13 @@
             <section class="riscos">
                 <div class="esquerda">
                     <div class="risco">
-                        <div class="conteudo">
-                            <h3>Risco de lorem</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                            <button>Saiba mais</button>
-                        </div>
-                        <img width="100" height="350" src="static/img/riscos/pexels-sharefaith-491036-1231215.jpg" alt="">
-                    </div>
-                    <div class="risco">
-                        <div class="conteudo">
-                            <h3>Risco de lorem</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                            <button>Saiba mais</button>
-                        </div>
-                        <img width="100" height="300" src="static/img/riscos/640-little-girl-playing-with-soap-bubbles-of-autumn-leaves-in-the-park.jpg" alt="">
-                    </div>
-                    <div class="risco">
-                        <div class="conteudo">
-                            <h3>Risco de lorem</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                            <button>Saiba mais</button>
-                        </div>
-                        <img width="100" height="300" src="static/img/riscos/4anos_da_crianca-just_real_moms-1.jpg" alt="">
+                        <div class="conteudo"></div>
+                        <img src="static/img/riscos/pexels-sharefaith-491036-1231215.jpg" alt="">
                     </div>
                 </div>
                 <div class="direita">
                     <div class="risco">
-                        <div class="conteudo">
-                            <h3>Risco de lorem</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                            <button>Saiba mais</button>
-                        </div>
-                        <img width="100" height="400" src="static/img/riscos/como-convencer-a-crianca-usar-oculos.jpg" alt="">
-                    </div>
-                    <div class="risco">
-                        <div class="conteudo">
-                            <h3>Risco de lorem</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                            <button>Saiba mais</button>
-                        </div>
-                        <img width="100" height="300" src="static/img/riscos/criancas-marista.jpg" alt="">
-                    </div>
-                    <div class="risco">
-                        <div class="conteudo">
-                            <h3>Risco de lorem</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                            <button>Saiba mais</button>
-                        </div>
-                        <img width="100" height="250" src="static/img/riscos/blog-saiba-como-encorajar-a-curiosidade-nas-criancas.jpg" alt="">
+
                     </div>
                 </div>
             </section>
@@ -191,21 +150,59 @@
 
             <div id="carrossel">
                 <div class="botões-recursos">
-                    <button class="flechas-recursos"><span class="material-symbols-outlined">arrow_back_ios</span></button>
+                    <button class="flechas-recursos" onclick="moveCarrossel(-1)"><span class="material-symbols-outlined">arrow_back_ios</span></button>
                     <div class="colecao-cards">
-                        <div class="card-sombra">
-                            <div class="card">
-                                <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
-                                <h5 class="titulo-card">NOME</h5>
-                                <p class="texto-card">Início de um texto sobre a ferramenta</p>
-                                <button class="botao-saibamais">Saiba mais</button>
-                                
-                            </div>
-                            <img src="static/img/recursos/sombra.png" alt="" id="sombra-card">
+
+                        <div class="card">
+                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <h5 class="titulo-card">FamiSafe</h5>
+                            <p class="texto-card">Início de um texto sobre a ferramenta</p>
+                            <button class="botao-saibamais">Saiba mais</button>
                         </div>
-                        
+
+                        <div class="card">
+                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <h5 class="titulo-card">Google Family Link</h5>
+                            <p class="texto-card">Início de um texto sobre a ferramenta</p>
+                            <button class="botao-saibamais">Saiba mais</button>
+                        </div>
+
+                        <div class="card">
+                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <h5 class="titulo-card">Kaspersky Safe Kids</h5>
+                            <p class="texto-card">Início de um texto sobre a ferramenta</p>
+                            <button class="botao-saibamais">Saiba mais</button>
+                        </div>
+
+                        <div class="card">
+                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <h5 class="titulo-card">McAfee Safe Family</h5>
+                            <p class="texto-card">Início de um texto sobre a ferramenta</p>
+                            <button class="botao-saibamais">Saiba mais</button>
+                        </div>
+
+                        <div class="card">
+                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <h5 class="titulo-card">Net Nanny</h5>
+                            <p class="texto-card">Início de um texto sobre a ferramenta</p>
+                            <button class="botao-saibamais">Saiba mais</button>
+                        </div>
+
+                        <div class="card">
+                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <h5 class="titulo-card">Norton Family</h5>
+                            <p class="texto-card">Início de um texto sobre a ferramenta</p>
+                            <button class="botao-saibamais">Saiba mais</button>
+                        </div>
+
+                        <div class="card">
+                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <h5 class="titulo-card">Qustodio</h5>
+                            <p class="texto-card">Início de um texto sobre a ferramenta</p>
+                            <button class="botao-saibamais">Saiba mais</button>
+                        </div>
                     </div>
-                    <button class="flechas-recursos"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
+                    <button class="flechas-recursos" onclick="moveCarrossel(1)"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
                 </div>
             </div>    
         </article>
