adição das fotos das ferramentas na seção de recursos

--- a/index.html
+++ b/index.html
@@ -155,49 +155,49 @@
                     <div class="colecao-cards">
 
                         <div class="card">
-                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <img src="static/img/recursos/famisafe.jpg" alt="" id="logo-ferramenta">
                             <h5 class="titulo-card">FamiSafe</h5>
                             <p class="texto-card">Início de um texto sobre a ferramenta</p>
                             <button class="botao-saibamais">Saiba mais</button>
                         </div>
 
                         <div class="card">
-                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <img src="static/img/recursos/familylink.png" alt="" id="logo-ferramenta">
                             <h5 class="titulo-card">Google Family Link</h5>
                             <p class="texto-card">Início de um texto sobre a ferramenta</p>
                             <button class="botao-saibamais">Saiba mais</button>
                         </div>
 
                         <div class="card">
-                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <img src="static/img/recursos/kasperskysafekids.jpg" alt="" id="logo-ferramenta">
                             <h5 class="titulo-card">Kaspersky Safe Kids</h5>
                             <p class="texto-card">Início de um texto sobre a ferramenta</p>
                             <button class="botao-saibamais">Saiba mais</button>
                         </div>
 
                         <div class="card">
-                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <img src="static/img/recursos/mcafeesafefamily.png" alt="" id="logo-ferramenta">
                             <h5 class="titulo-card">McAfee Safe Family</h5>
                             <p class="texto-card">Início de um texto sobre a ferramenta</p>
                             <button class="botao-saibamais">Saiba mais</button>
                         </div>
 
                         <div class="card">
-                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <img src="static/img/recursos/netnanny.png" alt="" id="logo-ferramenta">
                             <h5 class="titulo-card">Net Nanny</h5>
                             <p class="texto-card">Início de um texto sobre a ferramenta</p>
                             <button class="botao-saibamais">Saiba mais</button>
                         </div>
 
                         <div class="card">
-                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <img src="static/img/recursos/nortonfamily.png" alt="" id="logo-ferramenta">
                             <h5 class="titulo-card">Norton Family</h5>
                             <p class="texto-card">Início de um texto sobre a ferramenta</p>
                             <button class="botao-saibamais">Saiba mais</button>
                         </div>
 
                         <div class="card">
-                            <img src="static/img/recursos/foto-da-ferramenta.jpg" alt="" id="logo-ferramenta">
+                            <img src="static/img/recursos/qustodio.png" alt="" id="logo-ferramenta">
                             <h5 class="titulo-card">Qustodio</h5>
                             <p class="texto-card">Início de um texto sobre a ferramenta</p>
                             <button class="botao-saibamais">Saiba mais</button>
