adição do span de hamburguer

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 </head>
 <body>
         <nav>
+            <span id="hamburguer" class="material-symbols-outlined">menu</span>
             <li>
-                <ul><a href="">Aspectos</a></ul>
-                <ul><a href="">Riscos</a></ul>
+                <ul><a href="#aspectos">Aspectos</a></ul>
+                <ul><a href="#riscos">Riscos</a></ul>
                 <img src="static\img\logo.png" alt="Logo principal do site" id="logo-nav">
-                <ul><a href="">Recursos</a></ul>
+                <ul><a href="#recursos">Recursos</a></ul>
                 <ul id="ul-chat"><span class="material-symbols-outlined">chat</span><a href="">Chat</a></ul>
             </li>
         </nav>
