Correção dos recursos

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
 
             <div id="carrossel">
                 <div class="botões-recursos">
-                    <button class="flechas-recursos" onclick="moveCarrossel(-1)"><span class="material-symbols-outlined">arrow_back_ios</span></button>
+                    <button class="flechas-recursos tras"><span class="material-symbols-outlined">arrow_back_ios</span></button>
                     <div class="colecao-cards">
 
-                        <div class="card">
+                        <div class="card ativo">
                             <img src="static/img/recursos/famisafe.jpg" alt="" id="logo-ferramenta">
                             <h5 class="titulo-card">FamiSafe</h5>
                             <p class="texto-card">Início de um texto sobre a ferramenta</p>
@@ -245,7 +245,7 @@
                             <button class="botao-saibamais">Saiba mais</button>
                         </div>
                     </div>
-                    <button class="flechas-recursos" onclick="moveCarrossel(1)"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
+                    <button class="flechas-recursos frente"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
                 </div>
             </div>    
         </article>
@@ -262,13 +262,6 @@
 
 
             <div class="direita">
-
-            
-                <!-- <p href="">Aspectos</p>
-                <p href="">Riscos</p>
-                <p href="">Recursos</p>
-                <p href="">Chat</p> -->
-
                 <a href="">Aspectos</a><br>
                 <pre></pre>
                 <a href="">Riscos</a><br>
