atualizacao footer e nav

--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
     <link rel="stylesheet" href="static\css\media.css">
 </head>
 <body>
-        <nav>
+        <nav id="navbar">
             <span id="hamburguer" class="material-symbols-outlined">menu</span>
             <li>
                 <ul><a href="#aspectos">Aspectos</a></ul>
                 <ul><a href="#riscos">Riscos</a></ul>
-                <img src="static\img\logo.png" alt="Logo principal do site" id="logo-nav">
+                <img src="static/img/logo.png" alt="Logo principal do site" id="logo-nav">
                 <ul><a href="#recursos">Recursos</a></ul>
                 <ul id="ul-chat"><span class="material-symbols-outlined">chat</span><a href="">Chat</a></ul>
             </li>
         </nav>
+    
 
         <div class="stack">
             <div id="header-video-background">
@@ -181,7 +182,6 @@
         <article class="seção" id="divisão">
             <div>
                 <hr class="linha-divisao">
-                <!-- <img src="static/img/divisão/divisão.png" alt=""> -->
             </div>    
         </article>
 
@@ -253,23 +253,16 @@
 
     <footer>
         <div class="footerText">
-            <div class="esquerda"><img src="../seguranca-jovens-prototipo/static/img/logo.png" alt="" class="imgFooter">
+            <div class="esquerda">
                 <div class="new">
                     <h1>Inscreva-se na nossa Newsletter!</h1>
                     <input type="text" class="inputNew" placeholder=" pipipipopopo@gmail.com"> <br>
-                    <button class="ButtonNew">inscrever-se</button>
+                    <button class="ButtonNew">Inscrever-se</button>
                 </div>
             </div>
-
-
             <div class="direita">
-                <a href="">Aspectos</a><br>
-                <pre></pre>
-                <a href="">Riscos</a><br>
-                <pre></pre>
-                <a href="">Recursos</a><br>
-                <pre></pre>
-                <a href="">Chat</a>
+                <img src="../seguranca-jovens-prototipo/static/img/logo.png" alt="" class="imgFooter">
+                <h3 class="titulo">Nome site</h3>
             </div>
         </div>
     </footer>
