--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>    
     </article>
 
-    <article class="seção reveal" id="recursos">
+    <article class="seção" id="recursos">
         <div>
             <h2 class="titulo">Recursos</h2>
             <p class="texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae debitis ipsum quam architecto consectetur ex eaque iusto est soluta incidunt magni, quis voluptas quas sequi illum beatae officiis sed nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam error quam obcaecati pariatur voluptate explicabo fugiat eum omnis aut at suscipit temporibus repellat laudantium officia, numquam dolorum sed quis dignissimos!</p>
