Fundo da barra de navegação

--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
 </head>
 <body>
     <nav id="navbar">
-        <span id="hamburguer" class="material-symbols-outlined">menu</span>
-        <li>
-            <ul><a href="#aspectos">Aspectos</a></ul>
-            <ul><a href="#riscos">Riscos</a></ul>
-            <img src="static/img/logo.png" alt="Logo principal do site" id="logo-nav">
-            <ul><a href="#recursos">Recursos</a></ul>
-            <ul id="ul-chat"><span class="material-symbols-outlined">chat</span><a href="">Chat</a></ul>
-        </li>
+        <div class="nav-fundo"></div>
+        <div class="nav-real">
+            <span id="hamburguer" class="material-symbols-outlined">menu</span>
+            <li>
+                <ul><a href="#aspectos">Aspectos</a></ul>
+                <ul><a href="#riscos">Riscos</a></ul>
+                <img src="static/img/logo.png" alt="Logo principal do site" id="logo-nav">
+                <ul><a href="#recursos">Recursos</a></ul>
+                <ul id="ul-chat"><span class="material-symbols-outlined">chat</span><a href="">Chat</a></ul>
+            </li>
+        </div>
     </nav>
 
     <div class="stack">
