Configuração do modal

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="static\css\divisão.css">
     <link rel="stylesheet" href="static\css\riscos.css">
     <link rel="stylesheet" href="static\css\footer.css">
+    <link rel="stylesheet" href="static\css\modal.css">
     <link rel="stylesheet" href="static\css\media.css">
 </head>
 <body>
@@ -268,6 +269,14 @@
             </div>
         </div>
     </footer>
+
+    <div id="modal">
+        <div class="container">
+            <h3 class="titulo">Título</h3>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officia placeat ullam inventore nemo, numquam nulla ducimus minus laborum debitis amet, quo velit accusamus! Non nam at fugit ipsa corrupti?</p>
+            <button class="">Fechar</button>
+        </div>
+    </div>
 
     <script src="static/js/script.js"></script>
 </body>
