responsividade do footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <link rel="icon" href="static/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="static\css\geral.css">
     <link rel="stylesheet" href="static\css\header.css">
     <link rel="stylesheet" href="static\css\introducao.css">
@@ -25,7 +26,7 @@
             <li>
                 <ul><a href="#aspectos">Aspectos</a></ul>
                 <ul><a href="#riscos">Riscos</a></ul>
-                <img src="static/img/logo.png" alt="Logo principal do site" id="logo-nav">
+                <a href="#"><img src="static/img/logo.png" alt="Logo principal do site" id="logo-nav"></a>
                 <ul><a href="#recursos">Recursos</a></ul>
                 <ul id="ul-chat"><span class="material-symbols-outlined">chat</span><a href="">Chat</a></ul>
             </li>
@@ -62,7 +63,7 @@
         <section>
             <div class="conceito">
                 <div class="conteudo">
-                    <h3>Conceito</h3>
+                    <h3>Conscientização</h3>
                     <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
                     <button>Saiba mais</button>
                 </div>
@@ -76,7 +77,21 @@
             </div>
             <div class="conceito">
                 <div class="conteudo">
-                    <h3>Conceito</h3>
+                    <h3>Controle de conteúdo</h3>
+                    <p>Responsáveis devem monitorar o acesso de crianças para evitar conteúdos inadequados.</p>
+                    <button>Saiba mais</button>
+                </div>
+                <div class="espaco">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="conceito">
+                <div class="conteudo">
+                    <h3>Controle de tempo</h3>
                     <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
                     <button>Saiba mais</button>
                 </div>
@@ -90,7 +105,7 @@
             </div>
             <div class="conceito">
                 <div class="conteudo">
-                    <h3>Conceito</h3>
+                    <h3>Mediação ativa</h3>
                     <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
                     <button>Saiba mais</button>
                 </div>
@@ -102,6 +117,91 @@
                     <span></span>
                 </div>
             </div>
+            <div class="conceito">
+                <div class="conteudo">
+                    <h3>Mediação restritiva</h3>
+                    <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
+                    <button>Saiba mais</button>
+                </div>
+                <div class="espaco">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="conceito">
+                <div class="conteudo">
+                    <h3>Mediação técnica</h3>
+                    <p>Uso de softwares para restringir e monitorar atividades de crianças online.</p>
+                    <button>Saiba mais</button>
+                </div>
+                <div class="espaco">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="conceito">
+                <div class="conteudo">
+                    <h3>Monitoramento</h3>
+                    <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
+                    <button>Saiba mais</button>
+                </div>
+                <div class="espaco">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="conceito">
+                <div class="conteudo">
+                    <h3>Proteção de dados e privacidade</h3>
+                    <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
+                    <button>Saiba mais</button>
+                </div>
+                <div class="espaco">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="conceito">
+                <div class="conteudo">
+                    <h3>Registro de atividades</h3>
+                    <p>Banco de dados onde pais monitoram e bloqueiam sites acessados por crianças.</p>
+                    <button>Saiba mais</button>
+                </div>
+                <div class="espaco">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="conceito">
+                <div class="conteudo">
+                    <h3>Responsabilidade parental</h3>
+                    <p>Conhecimento dos riscos para evitar a exposição de menores na internet.</p>
+                    <button>Saiba mais</button>
+                </div>
+                <div class="espaco">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            
         </section>
     </article>
 
@@ -115,7 +215,7 @@
             <div class="esquerda">
                 <div class="risco">
                     <div class="conteudo">
-                        <h3>Risco de lorem</h3>
+                        <h3>Exposição de conteúdo indevido</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
                         <button>Saiba mais</button>
                     </div>
@@ -123,15 +223,15 @@
                 </div>
                 <div class="risco">
                     <div class="conteudo">
-                        <h3>Risco de lorem</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
+                        <h3>Acesso à informações privadas</h3>
+                        <p>A falta de monitoramento online expõe dados privados, por isso, é essencial a supervisão ou ferramentas de mediação para proteção.</p>
                         <button>Saiba mais</button>
                     </div>
                     <img width="100" height="300" src="static/img/riscos/640-little-girl-playing-with-soap-bubbles-of-autumn-leaves-in-the-park.jpg" alt="">
                 </div>
                 <div class="risco">
                     <div class="conteudo">
-                        <h3>Risco de lorem</h3>
+                        <h3>Uso excessivo da internet</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
                         <button>Saiba mais</button>
                     </div>
@@ -182,7 +282,7 @@
         </div>
     </article>
     
-    <article class="seção reveal" id="divisão">
+    <article id="divisão">
         <div>
             <hr class="linha-divisao">
         </div>    
@@ -204,49 +304,49 @@
                         <img src="static/img/recursos/famisafe.jpg" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">FamiSafe</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
-                        <button class="botao-saibamais">Saiba mais</button>
+                        <a href="https://famisafe.wondershare.com/br/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
                         <img src="static/img/recursos/familylink.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Google Family Link</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
-                        <button class="botao-saibamais">Saiba mais</button>
+                        <a href="https://familylink.google.com/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
                         <img src="static/img/recursos/kasperskysafekids.jpg" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Kaspersky Safe Kids</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
-                        <button class="botao-saibamais">Saiba mais</button>
+                        <a href="https://www.kaspersky.com.br/safe-kids" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
                         <img src="static/img/recursos/mcafeesafefamily.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">McAfee Safe Family</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
-                        <button class="botao-saibamais">Saiba mais</button>
+                        <a href="https://family.mcafee.com/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
                         <img src="static/img/recursos/netnanny.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Net Nanny</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
-                        <button class="botao-saibamais">Saiba mais</button>
+                        <a href="https://www.netnanny.com/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
                         <img src="static/img/recursos/nortonfamily.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Norton Family</h5>
-                        <p class="texto-card">Início de um texto sobre a ferramenta</p>
-                        <button class="botao-saibamais">Saiba mais</button>
+                        <p class="texto-card">Ajuda pais a cuidar das crianças, filtrando conteúdo e controlando o tempo de tela.</p>
+                        <a target="_blank" href="https://br.norton.com/products/norton-family?om_sem_cid=hho_sem_sy:~pt-br_nor_n36_sch_gen_dsa_nfr_adw_nad_low:pt_nb~c_kw0000692901&gad_source=1&gclid=Cj0KCQiAoae5BhCNARIsADVLzZcDhLsnaCKnMckbrbAovVA72tYhwRXmtkkMTpueUoZEv5UmTRdhJCwaAtXJEALw_wcB&gclsrc=aw.ds"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
                         <img src="static/img/recursos/qustodio.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Qustodio</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
-                        <button class="botao-saibamais">Saiba mais</button>
+                        <a href="https://www.qustodio.com/pt-br/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
                 </div>
                 <button class="flechas-recursos frente"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
