Atualização da nav

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div class="nav-fundo"></div>
         <div class="nav-real">
             <span id="hamburguer" class="material-symbols-outlined">menu</span>
-            <li>
-                <ul><a href="#aspectos">Aspectos</a></ul>
-                <ul><a href="#riscos">Riscos</a></ul>
+            <ul>
+                <li><a href="#aspectos">Aspectos</a></li>
+                <li><a href="#riscos">Riscos</a></li>
                 <img src="static/img/logo.png" alt="Logo principal do site" id="logo-nav">
-                <ul><a href="#recursos">Recursos</a></ul>
-                <ul id="ul-chat"><span class="material-symbols-outlined">chat</span><a href="">Chat</a></ul>
-            </li>
+                <li><a href="#recursos">Recursos</a></li>
+                <li id="li-chat"><span class="material-symbols-outlined">chat</span><a href="">Chat</a></li>
+            </ul>
         </div>
     </nav>
 
@@ -274,7 +274,7 @@
         <div class="container">
             <h3 class="titulo">Título</h3>
             <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officia placeat ullam inventore nemo, numquam nulla ducimus minus laborum debitis amet, quo velit accusamus! Non nam at fugit ipsa corrupti?</p>
-            <button class="">Fechar</button>
+            <button>Fechar</button>
         </div>
     </div>
 
