--- a/index.html
+++ b/index.html
@@ -357,9 +357,11 @@
     <footer>
         <div class="footerText">
             <div class="esquerda">
-                <h1>Inscreva-se na nossa Newsletter!</h1>
-                <input type="text" class="inputNew" placeholder="pipipipopopo@gmail.com">
-                <button class="ButtonNew">Inscrever-se</button>
+                <div class="new">
+                    <h1>Inscreva-se na nossa Newsletter!</h1>
+                    <input type="text" class="inputNew" placeholder=" pipipipopopo@gmail.com"> <br>
+                    <button class="ButtonNew">Inscrever-se</button>
+                </div>
             </div>
             <div class="direita">
                 <img src="../seguranca-jovens-prototipo/static/img/logo.png" alt="" class="imgFooter">
